# 30x-seo

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.playwright  LICENSE  README.md  SECURITY.md  TODO.md  package.json  pyproject.toml  requirements-dev.txt  requirements-optional.txt  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
agents/: seo-content.md  seo-performance.md  seo-schema.md  seo-sitemap.md  seo-technical.md  seo-visual.md
docs/: ARCHITECTURE.md  COMMANDS.md  DOCKER.md  OPENCODE.md  TROUBLESHOOTING.md
examples/: sample-page-audit.md  sample-technical-audit.md
hooks/: pre-commit-seo-check.sh  track-skill-usage.sh  validate-schema.py
output/: generative-engine-optimization-guide.md  generative-engine-optimization-meta.md  generative-engine-optimization-outline.md  generative-engine-optimization-schema.json
schema/: templates.json
scripts/: analyze_visual.py  brand_mentions.py  capture_screenshot.py  fetch_page.py  health_check.py  interactive_setup.py  parse_html.py  telemetry.py  validate_skills.py
seo/: SKILL.md
skills/30x-seo-ai-visibility/: SKILL.md
skills/30x-seo-architecture/: SKILL.md
skills/30x-seo-backlinks/: SKILL.md
skills/30x-seo-blog-pipeline/: SKILL.md
skills/30x-seo-cannibalization/: SKILL.md
tests/: conftest.py  test_brand_mentions.py  test_fetch_page.py  test_health_check.py  test_parse_html.py  test_skill_routing.py  test_telemetry.py  test_validate_skills.py
(+28 files in other folders)
