[project]
name = "30x-seo"
version = "1.3.0"
description = "31 specialized SEO skills for Claude Code"
requires-python = ">=3.12"
license = "MIT"
keywords = ["seo", "claude-code", "skills", "audit", "technical-seo"]

dependencies = [
    "beautifulsoup4>=4.12.0,<5.0.0",
    "requests>=2.32.4,<3.0.0",
    "lxml>=6.0.2,<7.0.0",
    "Pillow>=12.1.0,<13.0.0",
    "urllib3>=2.6.3,<3.0.0",
    "validators>=0.22.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "ruff>=0.9.0,<1.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "pre-commit>=4.0.0,<5.0.0",
]
playwright = [
    "playwright>=1.56.0,<2.0.0",
]

[project.urls]
Repository = "https://github.com/norahe0304-art/30x-seo"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "UP017",  # datetime.UTC alias — keep timezone.utc for Python 3.10 compat
]
